fix(UI): Address double scrollbar on example tabs for directive, pipe, and injectable

--- a/src/resources/styles/compodoc.css
+++ b/src/resources/styles/compodoc.css
@@ -202,7 +202,7 @@ a[href] {
     height: 100%;
 }
 
-.content-data iframe {
+.content-data .exampleContainer {
     height: 100%;
     width: 100%;
 }
